低版本盒子 https =》 http  （接口：app 更新、获取预告片列表）
