# docs/swagger.json
@@ -441,7 +441,6 @@
         "gredis.TrailerListParam": {
             "type": "object",
             "required": [
-                "channel_code",
                 "device_no",
                 "page"
             ],
@@ -453,6 +452,10 @@
                 "device_no": {
                     "description": "设备号",
                     "type": "string"
+                },
+                "isSecure": {
+                    "description": "判断返回链接形式 https or http;",
+                    "type": "boolean"
                 },
                 "page": {
                     "description": "页码",
